crates/diffler/src/ui/snapshots/diffler__ui__file__tests__a_long_line_wraps_under_a_blank_gutter.snap
---
source: crates/diffler/src/ui/file.rs
assertion_line: 322
expression: terminal.backend()
---
" b toggle blame · <cr> open commit · e open in editor · ? help          "
"  src/lib.rs  3 lines  ▸ aaaaaaa first                                  "
"▌aaaaaaa reviewer      1mo    1 fn main() {                             "
"                              2     let total = xxxxxxxxxxxxxxxxxxxxxxxx"
"                                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
"                                xxxxxxxxxxxxxxxxxxxxxxxxxx;             "
"                              3 }                                       "
"                                                                        "
" FILE  fixture@main · mcp off · 3 files, 0 viewed                       "
