crates/diffler/src/ui/snapshots/diffler__ui__file__tests__a_referenced_span_is_banded_across_its_rows.snap
---
source: crates/diffler/src/ui/file.rs
assertion_line: 302
expression: terminal.backend()
---
" b toggle blame · <cr> open commit · e open in editor · ? help          "
"  src/lib.rs  4 lines  ▸ aaaaaaa first                                  "
"   1 fn main() {                                                        "
"▌  2     let total = 1;                                                 "
"   3     println!("{total}");                                           "
"   4 }                                                                  "
"                                                                        "
"                                                                        "
" FILE  fixture@main · mcp off                                           "
