crates/diffler/src/ui/snapshots/diffler__ui__file__tests__renders_the_file_with_its_blame_column.snap
---
source: crates/diffler/src/ui/file.rs
assertion_line: 248
expression: terminal.backend()
---
" b toggle blame · <cr> open commit · e open in editor · ? help          "
"  src/lib.rs  4 lines  ▸ aaaaaaa first                                  "
"▌aaaaaaa reviewer      1mo    1 fn main() {                             "
"                              2     let total = 1;                      "
" bbbbbbb other         1mo    3     println!("{total}");                "
"                              4 }                                       "
"                                                                        "
"                                                                        "
" FILE  fixture@main · mcp off                                           "
